@@ -50,6 +50,7 @@
   the measurement output.
 - Added SCOREP_CUDA_ENABLE option 'references' to track references between
   CUDA host and device activities in the OTF2 trace.
+- Fix handling of Intel compiler options starting with "-o".
 
 ------------------- Released version 1.2.3 ---------------------------
 
